# Homework_14.1

./: README.md  pyproject.toml
src/: main.py
src/models/: category.py  product.py
src/utils/: file_loader.py
tests/test_models/: test_category.py  test_product.py
