[project]
name = "homework-14-1"
version = "0.1.0"
description = "working with regular expressions"
authors = [
    {name = "VoloshchenkoDmitry",email = "eldorado181118@gmail.com"}
]
license = {text = "GNU v.3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "mypy (>=1.16.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "homework_14"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true